Fixed capitalization of `NextSLideNoTab` method in `chapter-customer-app` (#104)
Switched all click boxes in `chapter-customer-app` to use simpler html tags as used by other chapters
Removed unused `mobile.html` in `chapter-customer-app`
Removed fixed heights of some flyouts in `chapter-blockchain` that were broken after flyout font size changes
Tweaked click-box sizes and positions in `chapter-customer-app` to better match comps (white space between button and orange glow)

--- a/src/styles/_chapter-blockchain.scss
+++ b/src/styles/_chapter-blockchain.scss
@@ -57,7 +57,6 @@
   .step-2a {
     .flyout {
       width: 295px;
-      height: 127px;
       display: flex;
       flex-flow: column;
       justify-content: center;
@@ -93,7 +92,6 @@
   .step-5a {
     .flyout {
       width: 295px;
-      height: 107px;
       display: flex;
       flex-flow: column;
       justify-content: center;
